# DMSlicer

./: .gitattributes  .gitignore  README.md  README_ACAG_MIGRATION.md  default_config.py  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.trae/documents/: Refactor BVH Code to bvh.py.md
Executable Knowledge Base/02_contour_engine/: 01_basic_boolean.md  01_basic_boolean.py  02_difference.md  02_difference.py  03_offset_shell.md  04_holes.md  04_holes.py  05_segments_to_loops.md  05_segments_to_loops.py
Executable Knowledge Base/02_contour_engine/code/: 03_offset_shell.py
amf/: ReadMe.md  beam-Body001Pad001.amf  beam.amf  cube_multi.AMF  cube_multi_separate.AMF  cube_multi_separate_unaligned.AMF  cube_mutli_1.AMF  cube_separate.AMF  cube_single.AMF  cubic_circle.AMF  test.AMF  test_1.AMF  test_2.AMF  truple_triangles.AMF
amf/ball/: source.AMF
amf/ball/cache/: meta.json  stage1_geom.npz  stage2_interfaces.json
amf/cube_multi_separate/: source.AMF
amf/cube_multi_separate/cache/: contour_slices_prim.json  meta.json  stage2_interfaces.json
amf/merge/: source.AMF
amf/scatter/: source.AMF
apps/: excersize.py  geom_streamlit_app.py  main.py  test.py
apps/modules/: controls.py  material_assignment_store.py  materialization.py  sidebar.py  state.py  unit_adjustor.py  utils.py  viewport.py
data/amf/: ReadMe.md  ball.AMF  beam-Body001Pad001.amf  beam.amf  cube.AMF  cube_multi_separate_unaligned.AMF.SLDPRT  cube_mutli_1.AMF  cube_separate.AMF  merge.AMF  test.AMF  truple_triangles.AMF
data/workspace/cube_multi_separate/: source.AMF
data/workspace/scatter/: source.AMF
docs/: hash_id_audit.md  style_guide.md
file_parser/: __init__.py  amf_parser.py  config.py  mesh_data.py
part/: part.py
reports/: env_verification_report.md  patch_level_comments_review.md  uv_project_inventory.csv  uv_project_inventory_meta.json
reports/accuracy_dependency/: README.md  dependency_graph.mmd  report.csv
scripts/: uv_project_report.py  verify_env.ps1  verify_env.py
src/dmslicer/: default_config.py
templates/: uv.toml
visualizer/: __init__.py  pyvista_visualizer.py  visualizer_interface.py
(+78 files in other folders)
