[project]
name = "dmslicer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "msgpack>=1.1.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyarrow>=23.0.0",
    "pyclipper>=1.4.0",
    "pyvista[jupyter]>=0.46.5",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black==24.10.0",
    "isort==5.13.2",
]
test = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
viz = ["vtk>=9.3", "pyvista[jupyter]>=0.46.5"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-q"

[tool.ruff]
line-length = 100
 target-version = "py312"
extend-exclude = ["**/.venv/**"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
explicit = true
